@@ -77,6 +77,7 @@ const string SettingsManager::settingTags[] =
 	"UseTLS", "AutoSearchLimit", "AltSortOrder", "AutoKickNoFavs", "PromptPassword", "SpyFrameIgnoreTthSearches",
 	"DontDlAlreadyQueued", "MaxCommandLength", "AllowUntrustedHubs", "AllowUntrustedClients",
 	"TLSPort", "FastHash", "SortFavUsersFirst", "ShowShellMenu", "MinSegmentSize", "FollowLinks",
+	"SendBloom",
 	"SENTRY",
 	// Int64
 	"TotalUpload", "TotalDownload",
@@ -271,6 +272,7 @@ SettingsManager::SettingsManager()
 	setDefault(SHOW_SHELL_MENU, false);
 	setDefault(MIN_SEGMENT_SIZE, 1024);
 	setDefault(FOLLOW_LINKS, false);
+	setDefault(SEND_BLOOM, true);
 
 #ifdef _WIN32
 	setDefault(MAIN_WINDOW_STATE, SW_SHOWNORMAL);
